# DeepMemoryExplorer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: __main__.py  _agent_runner.py  config.py  dependencies.py  main.py  models.py
backend/src/hivemind/: __init__.py  client.py  models.py
backend/src/llm/: client.py
backend/src/mcp/: server.py
backend/src/routers/: agent.py  analysis.py  benchmark.py  chat.py  graph.py  memories.py  settings.py  system.py
backend/src/ws/: proxy.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatThread.tsx  SourceCitations.tsx
frontend/src/components/feed/: EventCard.tsx  EventFeed.tsx  FeedControls.tsx
frontend/src/components/graph/: GraphCanvas.tsx  GraphControls.tsx  GraphSidebar.tsx
frontend/src/components/layout/: Shell.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/memory/: AnalysisPanel.tsx  MemoryCard.tsx  MemoryDetail.tsx  MemorySearch.tsx
frontend/src/components/ui/: Card.tsx  ScrollArea.tsx  Select.tsx  Slider.tsx  Tabs.tsx
frontend/src/lib/: api.ts  utils.ts  ws.ts
frontend/src/pages/: BenchmarkPage.tsx  ChatPage.tsx  FeedPage.tsx  GraphPage.tsx  MemoriesPage.tsx  SettingsPage.tsx  SystemPage.tsx
frontend/src/stores/: feed.ts  graph.ts  settings.ts
